// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the global DataSource component (Custom Structure) Component renders with correct content 1`] = `
<div>
  <div
    class="css-pb69ky"
  >
    <h2
      class="chakra-form__label css-e3y4kl"
      data-cy="Data Source"
      data-testid="data-source"
    >
      Data Source
    </h2>
    <fieldset>
      <div
        data-cy="data-source-options"
      >
        <div
          class="chakra-form-control prince-input-bottom-spacer css-0"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            data-cy="How do we feel about a label with this text? Does it work?"
            for="field-2"
            id="field-2-label"
          >
            How do we feel about a label with this text? Does it work?
          </label>
          <div
            class="chakra-stack css-n21gh5"
          >
            <div
              class="prince-option-label-wrapper css-79elbk"
            >
              <label
                class="chakra-checkbox css-1uiwwan"
                data-cy="DataSource0"
              >
                <input
                  class="chakra-checkbox__input"
                  id="DataSource0-checkbox"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value="Option1"
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-dnty2r"
                />
                <span
                  class="chakra-checkbox__label css-1oeb2oe"
                >
                  <p
                    class="chakra-text prince-option-label-text css-vjer7o"
                  >
                    Option 1
                  </p>
                </span>
              </label>
              <div
                class="chakra-collapse"
                style="overflow: hidden; display: none; opacity: 0; height: 0px;"
              />
            </div>
            <div
              class="prince-option-label-wrapper css-79elbk"
            >
              <label
                class="chakra-checkbox css-1uiwwan"
                data-cy="DataSource1"
              >
                <input
                  class="chakra-checkbox__input"
                  id="DataSource1-checkbox"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value="ABetterOption"
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-dnty2r"
                />
                <span
                  class="chakra-checkbox__label css-1oeb2oe"
                >
                  <p
                    class="chakra-text prince-option-label-text css-vjer7o"
                  >
                    A Better Option
                  </p>
                </span>
              </label>
              <div
                class="chakra-collapse"
                style="overflow: hidden; display: none; opacity: 0; height: 0px;"
              />
            </div>
            <div
              class="prince-option-label-wrapper css-79elbk"
            >
              <label
                class="chakra-checkbox css-1uiwwan"
                data-cy="DataSource2"
              >
                <input
                  class="chakra-checkbox__input"
                  id="DataSource2-checkbox"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value="SomethingEvenCrazierThanTheFirst2"
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-dnty2r"
                />
                <span
                  class="chakra-checkbox__label css-1oeb2oe"
                >
                  <p
                    class="chakra-text prince-option-label-text css-vjer7o"
                  >
                    Something Even Crazier Than The First 2
                  </p>
                </span>
              </label>
              <div
                class="chakra-collapse"
                style="overflow: hidden; display: none; opacity: 0; height: 0px;"
              />
            </div>
          </div>
          <div
            class="css-k008qs"
          >
            <div
              class="css-17xejub"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Test the global DataSource component (Default) Component renders with correct content 1`] = `
<div>
  <div
    class="css-pb69ky"
  >
    <h2
      class="chakra-form__label css-e3y4kl"
      data-cy="Data Source"
      data-testid="data-source"
    >
      Data Source
    </h2>
    <fieldset>
      <div
        data-cy="data-source-options"
      >
        <div
          class="chakra-form-control prince-input-bottom-spacer css-0"
          role="group"
        >
          <label
            class="chakra-form__label css-uvho5g"
            data-cy="If reporting entities (e.g., health plans) used different data sources, please select all applicable data sources used below."
            for="field-1"
            id="field-1-label"
          >
            If reporting entities (e.g., health plans) used different data sources, please select all applicable data sources used below.
          </label>
          <div
            class="chakra-stack css-n21gh5"
          >
            <div
              class="prince-option-label-wrapper css-79elbk"
            >
              <label
                class="chakra-checkbox css-1uiwwan"
                data-cy="DataSource0"
              >
                <input
                  class="chakra-checkbox__input"
                  id="DataSource0-checkbox"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value="AdministrativeData"
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-dnty2r"
                />
                <span
                  class="chakra-checkbox__label css-1oeb2oe"
                >
                  <p
                    class="chakra-text prince-option-label-text css-vjer7o"
                  >
                    Administrative Data
                  </p>
                </span>
              </label>
              <div
                class="chakra-collapse"
                style="overflow: hidden; display: none; opacity: 0; height: 0px;"
              />
            </div>
            <div
              class="prince-option-label-wrapper css-79elbk"
            >
              <label
                class="chakra-checkbox css-1uiwwan"
                data-cy="DataSource1"
              >
                <input
                  class="chakra-checkbox__input"
                  id="DataSource1-checkbox"
                  style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
                  type="checkbox"
                  value="OtherDataSource"
                />
                <span
                  aria-hidden="true"
                  class="chakra-checkbox__control css-dnty2r"
                />
                <span
                  class="chakra-checkbox__label css-1oeb2oe"
                >
                  <p
                    class="chakra-text prince-option-label-text css-vjer7o"
                  >
                    Other Data Source
                  </p>
                </span>
              </label>
              <div
                class="chakra-collapse"
                style="overflow: hidden; display: none; opacity: 0; height: 0px;"
              />
            </div>
          </div>
          <div
            class="css-k008qs"
          >
            <div
              class="css-17xejub"
            />
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
